Fixes classnames and flex issues on IE

--- a/src/styles/components/network/_entities-container.scss
+++ b/src/styles/components/network/_entities-container.scss
@@ -9,5 +9,5 @@
   padding: $page-container-vertical-padding 0;
   overflow-x: auto;
   overflow-y: hidden;
-  flex: 1;
+  flex: 1 0 auto;
 }
