--- a/src/styles/components/network/_network-item.scss
+++ b/src/styles/components/network/_network-item.scss
@@ -11,7 +11,6 @@ $network-item-status-indicator-width: 8px;
   margin-bottom: $network-item-padding-horizontal;
   cursor: pointer;
   border: 2px solid $black;
-  flex: none;
 
   &:last-child {
     margin-bottom: 0;
